force-app/main/default/objects/SalesDistrict__c/SalesDistrict__c.object-meta.xml
<CustomObject>
    <label>Sales District</label>
    <nameField>
        <label>Sales District Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Districts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>