force-app/main/default/objects/SalesDistrict__c/fields/CountryIsoCode__c.field-meta.xml
<CustomField>
    <fullName>CountryIsoCode__c</fullName>
    <label>Country ISO Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>