force-app/main/default/objects/SalesDistrict__c/fields/SalesDistrictKey__c.field-meta.xml
<CustomField>
    <fullName>SalesDistrictKey__c</fullName>
    <externalId>true</externalId>
    <label>Sales District Key</label>
    <length>4</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>