force-app/main/default/objects/SalesDistrict__c/fields/ServiceManager__c.field-meta.xml
<CustomField>
    <fullName>ServiceManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ServiceSalesDistricts</relationshipName>
    <type>Lookup</type>
</CustomField>