force-app/main/default/objects/SalesDistrict__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Country__c</columns>
    <columns>CountryIsoCode__c</columns>
    <columns>isDefault__c</columns>
    <columns>SalesDistrictKey__c</columns>
    <columns>SalesManager__c</columns>
    <columns>ServiceManager__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>